Changelog
=========

1.7.1 - Unreleased
------------------

- Display only Group Portlets on our home dashboard view.
  [Vitaliy Podoba]

1.7 - March 20, 2013
--------------------

- Fixes bug in livesearch_reply.py.
  [Jose]

- Adds method post_and-index_object to replace WSAPI's post_object.
  [Jose Dinuncio]

1.6.9 - March 6, 2013
---------------------

- Fixes livesearch style when no result found, add collection icon to sprite.
  [Cesar Gonzalez]

- Adds viewlet for custom favicon links & apple touch icons links.
  [Cesar Gonzalez]

- Add Generic IFrame portlet.
  [Jose Dinuncio]

- Adds info for breadcrumbs and size in livesearch_reply.py
  [Jose Dinuncio]

- Adds fullname to livesearch result items.
  [Cesar Gonzalez]

- Adds style, content type icons to Live Search.
  [Cesar Gonzalez]

- Fixes display problem with document viewer and action menu.
  [Cesar Gonzalez]

- Fixes bug in RelatedRedmineTicketsViewlet.update trying to get UUID
  from RootSite.
  [Jose Dinuncio]

- Limits tree height and show scrollbars. Keep Ok button in position.
  [Cesar Gonzalez]

- Updates to make mobile site version work.
  [Vitaliy Podoba, Cesar Gonzalez]

- Make site root a dashboard.
  [Vitaliy Podoba]

- Refine Live Search Results
  [Cesar Gonzalez]

1.6.8 - February 14, 2013
-------------------------

- Style Cast and Chat links.
  [Cesar Gonzalez]

- Fixed styles for Document Table Of Contents viewlet.
  [Vitaliy Podoba]

- Add more prominent close button to CREATE NEW WIZARD.
  [Cesar Gonzalez]

- Try to prevent zimbra calendar portlet issue.
  [Jose Dinuncio]

- Add Cast link right before Chat.
  [Vitaliy Podoba]

- Add Group details page.
  [Vitaliy Podoba]

- Do not alert on ajax errors.
  [Vitaliy Podoba]

1.6.7 - January 30, 2013
------------------------

- Moves email_autocomplete_json from cloudstream to theme.
  [Jose Dinuncio]

- Modifies Add wizard.
  [Jose Dinuncio, Cesar Gonzalez]

- Dump initial setup installation profile.
  [Vitaliy Podoba]
