@@ -10,6 +10,7 @@ body {
   font:100% "Myriad Pro", Arial, FreeSans, sans-serif;
   min-width: 1060px;
   }
+
 #ploneimage,
 #plonelink {
   min-width: 0;
@@ -23,7 +24,7 @@ body {
 #portal-columns {
   background-color: #f2f2f2;
   border-bottom: 1px solid #c1ccd5;
-  padding: 22px 0 50px;
+  padding: 30px 0 50px;
   position: relative;
   width: 100%;
   }
@@ -863,7 +864,7 @@ div.postItemWrapper {
   padding:1px;
   }
 #content h1.documentFirstHeading {
-  font-weight: 400;
+  font-weight: bold;
   margin: 0 0 2px;
   padding: 0;
   text-transform: uppercase;
@@ -901,10 +902,6 @@ div.postItemWrapper {
 .documentActions {
   margin-bottom: 10px;
   padding: 30px;
-}
-
-#content-core {
-  border: 1px solid #CED5DB;
 }
 
 .sc_social_bookmarks_viewlet {
@@ -953,17 +950,26 @@ div.postItemWrapper {
 #content {
   font-size:0.75em;
   line-height:1.5em;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  }
+.portaltype-document #content {
+  font-size:0.75em;
+  line-height:1.5em;
   margin:0;
   padding: 1em 2em;
   position: relative;
-  }
+}
 #content .documentDescription,
 #content #description {
-  color:#082736;
+  color:rgba(0,42,67,0.6);
   font-weight:normal;
   font-style: italic;
   margin-bottom:30px;
   padding: 0;
+  font-family: georgia, 'Times New Roman', serif;
+  font-size: 16px;
   }
 a:link,
 #content a:link,
@@ -981,6 +987,10 @@ dl.portlet a:hover,
   color:#012a43 !important;
   }
 
+  #content a.link-overlay {
+    border-bottom: none !important;
+  }
+
 /* Table of Contents for Document body */
 dl#document-toc {
   z-index: 1000;
@@ -988,14 +998,62 @@ dl#document-toc {
 
 #content-core {
     margin-bottom: 10px;
+    padding: 0;
+    margin-right: 0;
+    margin-left: 0;
+    border:none;
+    box-shadow: none;
+    border: none;
+    background: transparent;
+}
+
+.portaltype-document #content-core {
+    border-top: 1px solid rgba(0,42,67,0.1);
+    border-bottom: 1px solid rgba(0,42,67,0.1);
+    border-left: none;
+    border-right: none;
+    margin-bottom: 10px;
     padding: 30px;
     margin-right: -24px;
     margin-left: -24px;
+    position: static;
+    background-color: white;
+}
+.portaltype-document .content-top-shadow {
+    background:url(&dtml-portal_url;/shadow_hor_full_top.png) no-repeat 0 0;
+    background-size: 100% 9px;
+    color: transparent;
+    display: block;
+    height: 9px;
+    left: 0px;
+    position: absolute;
+    margin-top: -8px;
+    width: 100%;
+}
+.portaltype-document .content-bottom-shadow {
+    background:url(&dtml-portal_url;/shadow_hor_full_top.png) no-repeat 0 0;
+    background-size: 100% 9px;
+    color: transparent;
+    height: 9px;
+    left: 0px;
+    margin-top: -11px;
+    position: absolute;
+    width: 100%;
+    transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
 }
 
 .relatedItems, .sc_social_bookmarks_viewlet, .documentActions {
     margin-bottom: 10px;
     padding: 20px;
+}
+.portaltype-document .relatedItems, .portaltype-document .sc_social_bookmarks_viewlet, .portaltype-document .documentActions {
+    margin-bottom: 10px;
+    margin-top: 20px;
+    padding: 0px;
 }
 
 h1 {
@@ -1270,7 +1328,7 @@ dl.portlet dd.portletFooter {
 
 /*----- Portlet Navigation -----*/
 dl.portletNavigationTree dd.portletItem {
-  padding: 8px 0 3px;
+  padding: 0 0 3px;
   }
 dl.portlet .navTreeItem {
   margin:0;
@@ -1558,6 +1616,7 @@ dl.portlet ul.navTreeLevel1 > .navTreeItem:first-child {
   }
 #contentActionMenus {
   background:transparent;
+  font-size: 13px;
   margin:0 0 1em;
   padding: 0;
   right:0;
@@ -1576,11 +1635,22 @@ dl.actionMenu {
  position: relative;
  margin-left: 1px;
 }
-
 #contentActionMenus dl.actionMenu dt a {
   background-color:#8599A5;
   border-radius: 0;
-  line-height: 1.97em;
+  line-height: 30px;
+  height: 30px;
+  padding: 0 10px;
+  }
+.portaltype-document #contentActionMenus dl.actionMenu dt a {
+  background-color: transparent;
+  border-radius: 0;
+  border-right: 1px solid rgba(0,42,67,0.2);
+  color: rgba(0,42,67,1.0);
+  font-weight: 400;
+  letter-spacing: 1px;
+  line-height: 2.6em;
+  height: 2.6em;
   padding: 0 10px;
   }
 #contentActionMenus dl.actionMenu.activated dt a {
@@ -1612,8 +1682,8 @@ dl.actionMenu {
   }
 
 #contentActionMenus dl.actionMenu.activated dd a:hover, #contentActionMenus dl.actionMenu.activated dd .actionMenuSelected {
-    background-color: #CED5DB !important;
-    color: #012a43;
+    background-color: #8599A5 !important;
+    color: white;
 }
 
 #plone-contentmenu-factories.actionMenu.activated dd.actionMenuContent ul li a {
@@ -1802,6 +1872,13 @@ dl.actionMenu {
   list-style:none;
   padding:2px 10px;
   }
+ .portaltype-document #document-action-socialbookmark {
+  background:rgba(1, 42, 67, 0.1);
+  border-radius:1em;
+  list-style:none;
+  padding: 2px 10px;
+  margin: 10px 0 0;
+  }
 #document-action-socialbookmark:hover {
   background:#012a43;
 /*  border-top-left-radius:0;
@@ -1822,6 +1899,16 @@ dl.actionMenu {
 .thumb-rating {
   margin: 0px 30px 5px 10px;
   }
+
+.portaltype-document .thumb-rating {
+  margin: -10px 0px 5px 10px;       
+}
+
+.portaltype-document .thumbs-rating input[type="submit"], select {
+  background-color: transparent;
+  border: none !important;
+}
+
 input.like-button,
 input.dislike-button {
   background-color:transparent;
@@ -1862,18 +1949,19 @@ form input.dislike-button {
 dl.portalMessage{
   background-color: rgba(1, 42, 67, 0.1);
   border: 1px solid rgba(1, 42, 67, 0.5);
-  border-radius: 15px;
+  border-radius: 5px;
   color: rgba(1, 42, 67, 1.0);
+  margin: 20px;
   }
 
 dl.portalMessage dt {
   background-color: rgba(1, 42, 67, 1.0);
-  border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
   padding-left: 14px;
   }
 dl.portalMessage dd {
-  border-radius: 15px;
+  border-radius:5px;
   }
 
 .slimScrollDiv {
@@ -2815,9 +2903,23 @@ div.add-xmpp-contact {
   background-color: #ced5db;
   border-radius: 0;
   border: none;
+  font-size: 16px;
+  margin-bottom: 2em;
+  min-height: 30px;
+  height: 30px;
+  padding-top: 0;
+}
+.portaltype-document #edit-bar {
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  background-color: #e1e5e7;
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px dashed rgba(0,42,67,0.2) !important;
   font-size: 0.84em;
   margin-bottom: 2em;
-  min-height: 2em;
+  min-height: 2.5em;
+  height: 2.5em;
   padding-top: 0;
 }
 #content-views {
@@ -2857,20 +2959,28 @@ div.add-xmpp-contact {
 #content-core li.formTab a {
   /* this isn't supported by all browsers, so we keep it in a separate rule */
   display: inline-block;
-}
-#content-views a,
-#content li.formTab a,
-#content-core li.formTab a {
   border: none;
-  line-height: 2em;
+  line-height: 30px;
   margin: 0 ;
   padding: 0 1.0em;
   text-decoration: none;
 }
+.portaltype-document #content-views a,
+.portaltype-document #content li.formTab a,
+.portaltype-document #content-core li.formTab a {
+  /* this isn't supported by all browsers, so we keep it in a separate rule */
+  display: inline-block;
+  border: none;
+  line-height: 2.6em;
+  margin: 0 ;
+  padding: 0 15px;
+  text-decoration: none;
+  border-right: 1px solid rgba(0,42,67,0.2) !important;
+}
 #content-views li.selected a,
 #content li.formTab a.selected,
 #content-core li.formTab a.selected {
-  font-weight: bold;
+  font-weight: normal;
 }
 #content-views li.selected a,
 #content-views li a:hover,
@@ -2883,7 +2993,25 @@ div.add-xmpp-contact {
   background: #8599a5;
   border-radius: 0;
   color: White;
-  height: 2em;
+  height: 30px;
+}
+
+.portaltype-document #content-views li.selected a,
+.portaltype-document #content-views li a:hover,
+.portaltype-document #content li.formTab a.selected,
+.portaltype-document #content li.formTab a:hover,
+.portaltype-document #content-core li.formTab a.selected,
+.portaltype-document #content-core li.formTab a:hover {
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  background: transparent;
+  border-radius: 0;
+  color: rgba(0,42,67,1.0) !important;
+  font-weight: 600;
+  height: 2.6em;
+  line-height: 2.6em;
+  letter-spacing: 2px;
+  padding: 0 15px;
 }
 
 #content-views li.selected a:after {
@@ -2898,16 +3026,33 @@ div.add-xmpp-contact {
 
 /* @end */
 
-
 .documentEditable {
-  background: #f9f9f9;
+  background: none;
+}
+
+.portaltype-document .documentEditable {
+  background: rgba(255,255,255,0.7);
+  border: 1px solid rgba(0, 42, 67, 0.2); 
 }
 
 #content div.documentByLine {
   color: #95A8B4;
   display: block;
-  font-size: 1em;
-  font-weight: bold;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 0 0 20px 0;
+}
+
+.portaltype-document #content div.documentByLine a,  
+.portaltype-document #content div.documentByLine a:Visited { 
+  color: #6ea21b;  
+}
+
+.portaltype-document #content div.documentByLine {
+  color: rgba(0,42,67,0.4);;
+  display: block;
+  font-size: 1.1em;
+  font-weight: 400;
   padding: 0 0 20px 0;
 }
 
@@ -2927,6 +3072,19 @@ ul.contentViews li.selected:after {
   display: block;
   height: 0;
   margin: 0 auto;
+  position: relative;
+  width: 0;
+  z-index: 1;
+}
+
+.portaltype-document ul.contentViews li.selected:after {
+  border-color: #e1e5e7 transparent transparent;
+  border-style: solid;
+  border-width: 12px 12px 0;
+  content: " ";
+  display: block;
+  height: 0;
+  margin: -1px auto;
   position: relative;
   width: 0;
   z-index: 1;
@@ -3182,6 +3340,16 @@ table.listing td:last-child {
   border-top-right-radius: 5px;
   border-bottom: none;
   margin: 30px 0 0 0;
+  min-height: 4px;
+}
+.portaltype-document .discussion {
+  clear: both;
+  background-color: #e7e9ec;
+  border: 1px solid #C1CCD5;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom: none;
+  margin: -1 5px 0 5px;
   min-height: 4px;
 }
 
